--- a/base2.css
+++ b/base2.css
@@ -206,3 +206,34 @@ table {
 .carousel-indicators {
     bottom: 40px;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 75%; /* This maintains 4:3 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-control {
+    width: 5%;  /* Make the clickable area thinner (default is 15%) */
+}
+
+.carousel-control .glyphicon-chevron-left,
+.carousel-control .glyphicon-chevron-right {
+    font-size: 20px;  /* Make the arrow icons smaller (default is 30px) */
+    width: 20px;      /* Reduce width */
+    height: 20px;     /* Reduce height */
+    margin-top: -10px;  /* Adjust vertical centering */
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none;  /* Remove the default gradient */
+}
